# nbody

./: .gitignore  .gitmodules  .travis-run-local.py  .travis.yml  Dockerfile  GNUmakefile  README.md  common.mk  meson.build  meson_options.txt  nbody.sh
.github/: install-fedora.sh  install-ubuntu.sh  script.sh
.github/workflows/: build.yml
.travis/: install-fedora.sh  install-post.sh  install-ubuntu.sh  script.sh
scripts/: compare-compilers  compare-macOS-15  nbody-stats.py
src/: .gitignore  GNUmakefile  _cc_test_openmp_modern.c  bodybodyInteraction.cuh  bodybodyInteraction_AVX.h  bodybodyInteraction_AltiVec.h  bodybodyInteraction_NEON.h  bodybodyInteraction_SSE.h  chCUDA.h  chError.h  chThread.h  common.mk  nbody.cu  nbody.h  nbody_CPU_AOS.c  nbody_CPU_AOS.cpp  nbody_CPU_AOS.h  nbody_CPU_AOS_tiled.c  nbody_CPU_AOS_tiled.cpp  nbody_CPU_AOS_tiled.h  nbody_CPU_AVX.c  nbody_CPU_AVX.cpp  nbody_CPU_AltiVec.c  nbody_CPU_AltiVec.cpp  nbody_CPU_NEON.c  nbody_CPU_NEON.cpp  nbody_CPU_SIMD.h  nbody_CPU_SOA.c  nbody_CPU_SOA.cpp  nbody_CPU_SOA.h  nbody_CPU_SOA_tiled.c  nbody_CPU_SOA_tiled.cpp  nbody_CPU_SOA_tiled.h  nbody_CPU_SSE.c  nbody_CPU_SSE.cpp  nbody_GPU_AOS.cu  nbody_GPU_AOS.cuh  nbody_GPU_AOS.h  nbody_GPU_AOS_const.cu  nbody_GPU_AOS_const.cuh  (+32 more)
