option('use_cuda', type: 'boolean', value: false, description: 'NVIDIA CUDA support')
option('nvcc', type: 'string', value: 'nvcc', description: 'CUDA compiler name')
option('openmp', type: 'boolean', value: true, description: 'OpenMP threading')
option('opengl', type: 'boolean', value: false, description: 'OpenGL simulation rendering')
option('intrinsics', type: 'boolean', value: true, description: 'Compile SIMD intrinsic implementation for your platform')
option('march', type: 'string', value: 'native', description: 'Compile for specific CPU architecture on x86/x86_64')
